# gamez

./: .gitignore  .prettierrc  CHANGELOG.md  Cargo.toml  README.md  deploy.md  flake.nix  package-lock.json  package.json  tsconfig.json
.github/workflows/: test.yaml
dnas/gamez/workdir/: dna.yaml
tests/: package.json  tsconfig.json
ui/: .prettierrc  index.html  package.json  svelte.config.js  tsconfig.json  types.d.ts  unocss.config.ts  vite.config.ts
ui/src/: AboutDialog.svelte  App.svelte  AttachmentsBind.svelte  AttachmentsDialog.svelte  AttachmentsList.svelte  Avatar.svelte  AvatarDialog.svelte  Bind.svelte  BoardDefItem.svelte  BoardEditor.svelte  BoardMenu.svelte  BoardMenuItem.svelte  Button.svelte  Controller.svelte  ControllerBoard.svelte  ControllerCreate.svelte  EditBoardDialog.svelte  EditGameTypeDialog.svelte  Folk.svelte  GamezPane.svelte  LayoutBar.svelte  Loader.svelte  NewBoardDialog.svelte  NewGameSpace.svelte  Participants.svelte  ParticipantsDialog.svelte  PlayerName.svelte  SortSelector.svelte  StartGameDialog.svelte  SvgIcon.svelte  Toolbar.svelte  WalAsset.svelte  WalSpace.svelte  app.css  appletServices.ts  board.ts  boardList.ts  clients.ts  defaultGames.ts  global.d.ts  (+7 more)
ui/src/BoardEditor/: BoardEditor.svelte  BoardEditorInput.svelte  BoardEditorPlain.svelte  EmojiPicker.svelte  IntegerInput.svelte  PieceTypeCard.svelte  index.ts
ui/src/BoardEditorPage/: BoardEditorPage.svelte  BoardEditorPlain.svelte  PieceTypeCard.svelte  index.ts
ui/src/BoardPage/: AttachmentsBar.svelte  AttachmentsList.svelte  BoardPage.svelte  Piece.svelte  PieceAttachmentsDialog.svelte  WalAsset.svelte  index.ts
ui/src/GameBoard/: GameBoard.svelte  Piece.svelte  index.ts  utils.ts
ui/src/GameSpace/: CommonConfigButtons.svelte  ElementConfigMenu.svelte  ElementWrapper.svelte  ElementsLibrary.svelte  GameSpace.svelte  Grid.svelte  LockConfig.svelte  MiniView.svelte  NewGameSpace.svelte  Page.svelte  PeopleBar.svelte  ResizeHandles.svelte  (+8 more)
we_dev/: config.json  config.ts  tool-library.ts  tsconfig.json
workdir/: happ.yaml  web-happ.yaml
(+287 files in other folders)
