[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["dnas/*/zomes/coordinator/*", "dnas/*/zomes/integrity/*"]
resolver = "2"

[workspace.dependencies]
hdi = "0.3"
hdk = "0.2"
serde = "1"

[workspace.dependencies.gamez]
path = "dnas/gamez/zomes/coordinator/gamez"

[workspace.dependencies.gamez_integrity]
path = "dnas/gamez/zomes/integrity/gamez"

[workspace.dependencies.profiles]
path = "dnas/gamez/zomes/coordinator/profiles"

[workspace.dependencies.profiles_integrity]
path = "dnas/gamez/zomes/integrity/profiles"

[workspace.dependencies.file_storage]
path = "dnas/gamez/zomes/coordinator/file_storage"

[workspace.dependencies.file_storage_integrity]
path = "dnas/gamez/zomes/integrity/file_storage"
