[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["dnas/*/zomes/coordinator/*", "dnas/*/zomes/integrity/*"]
resolver = "2"

[workspace.dependencies]
hdi = "0.4.1"
hdk = "0.3.1"
serde = "1"

[workspace.dependencies.gamez]
path = "dnas/gamez/zomes/coordinator/gamez"

[workspace.dependencies.gamez_integrity]
path = "dnas/gamez/zomes/integrity/gamez"

[workspace.dependencies.profiles]
path = "dnas/gamez/zomes/coordinator/profiles"

[workspace.dependencies.profiles_integrity]
path = "dnas/gamez/zomes/integrity/profiles"
